demo/RhythMLParser.java
// Generated from RhythML.g4 by ANTLR 4.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RhythMLParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__2=1, T__1=2, T__0=3, Id=4, Beat=5, WS=6;
	public static final String[] tokenNames = {
		"<INVALID>", "']'", "'['", "':'", "Id", "Beat", "WS"
	};
	public static final int
		RULE_p = 0, RULE_rhy = 1, RULE_inst = 2, RULE_bar = 3, RULE_beats = 4;
	public static final String[] ruleNames = {
		"p", "rhy", "inst", "bar", "beats"
	};

	@Override
	public String getGrammarFileName() { return "RhythML.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public RhythMLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class PContext extends ParserRuleContext {
		public RhyContext rhy() {
			return getRuleContext(RhyContext.class,0);
		}
		public PContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_p; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RhythMLListener ) ((RhythMLListener)listener).enterP(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RhythMLListener ) ((RhythMLListener)listener).exitP(this);
		}
	}

	public final PContext p() throws RecognitionException {
		PContext _localctx = new PContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_p);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(10); rhy();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RhyContext extends ParserRuleContext {
		public RhyContext rhy() {
			return getRuleContext(RhyContext.class,0);
		}
		public InstContext inst() {
			return getRuleContext(InstContext.class,0);
		}
		public RhyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rhy; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RhythMLListener ) ((RhythMLListener)listener).enterRhy(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RhythMLListener ) ((RhythMLListener)listener).exitRhy(this);
		}
	}

	public final RhyContext rhy() throws RecognitionException {
		RhyContext _localctx = new RhyContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_rhy);
		try {
			setState(16);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(12); inst();
				setState(13); rhy();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(15); inst();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstContext extends ParserRuleContext {
		public TerminalNode Id() { return getToken(RhythMLParser.Id, 0); }
		public BarContext bar() {
			return getRuleContext(BarContext.class,0);
		}
		public InstContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inst; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RhythMLListener ) ((RhythMLListener)listener).enterInst(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RhythMLListener ) ((RhythMLListener)listener).exitInst(this);
		}
	}

	public final InstContext inst() throws RecognitionException {
		InstContext _localctx = new InstContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_inst);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(18); match(Id);
			setState(19); match(3);
			setState(20); bar();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BarContext extends ParserRuleContext {
		public BeatsContext beats() {
			return getRuleContext(BeatsContext.class,0);
		}
		public BarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RhythMLListener ) ((RhythMLListener)listener).enterBar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RhythMLListener ) ((RhythMLListener)listener).exitBar(this);
		}
	}

	public final BarContext bar() throws RecognitionException {
		BarContext _localctx = new BarContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_bar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(22); match(2);
			setState(23); beats();
			setState(24); match(1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BeatsContext extends ParserRuleContext {
		public BeatsContext beats() {
			return getRuleContext(BeatsContext.class,0);
		}
		public TerminalNode Beat() { return getToken(RhythMLParser.Beat, 0); }
		public BeatsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_beats; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RhythMLListener ) ((RhythMLListener)listener).enterBeats(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RhythMLListener ) ((RhythMLListener)listener).exitBeats(this);
		}
	}

	public final BeatsContext beats() throws RecognitionException {
		BeatsContext _localctx = new BeatsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_beats);
		try {
			setState(29);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(26); match(Beat);
				setState(27); beats();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(28); match(Beat);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		ATNSimulator.deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}